--- a/.github/workflows/shortenertest.yml
+++ b/.github/workflows/shortenertest.yml
@@ -130,7 +130,7 @@ jobs:
         run: |
           shortenertest -test.v -test.run=^TestIteration11$ \
               -binary-path=cmd/shortener/shortener \
-              -d='postgres://postgres:postgres@postgres:5432/praktikum?sslmode=disable'
+              -database-dsn='postgres://postgres:postgres@postgres:5432/praktikum?sslmode=disable'
 
       - name: "Code increment #12"
         if: always()
